[package]
name = "cloudflare-systems-assignment"
version = "0.2.2"
authors = ["Tarik Eshaq"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/tarikeshaq/cloudflare-2020-systems-engineering-assignment"
repository = "https://github.com/tarikeshaq/cloudflare-2020-systems-engineering-assignment"
description = "A solution to cloudflare's systems engineering assignment in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ansi_term = "0.12"
clap = "2.33"
url = "2.1"
billboard = "0.1.0"
crossbeam = "0.8"
